# understanding-software-dynamics

./: CMakeLists.txt  flake.nix
notes/: chapter2.org
src/: CMakeLists.txt  mystery1.c
src/instrumentation/: instrumentation.cpp  instrumentation.h
